seasonssk.css
/* ... */
.stock-wrapper {
	display: grid;
}

.stock-wrapper div {
	grid-column: 1;
	grid-row: 1;
}

/* card */

.cardtitle {
	position: absolute;
	top: 5px;
	left: 23px;
	font-weight: bold;
	font-size: 50%;
	width: 80px;
	text-align: center;
}

.cardtooltip {
	text-align: center;
	max-width: 300px;
}
.dietooltip {
	max-width: 300px;
}
.possibleCard {
	border-radius: 15px;
	box-shadow: 0px 0px 2px 2px rgb(186 86 209 / 93%);
	-moz-box-shadow: 0px 0px 2px 2px rgb(186 86 209 / 93%);
	-webkit-box-shadow: 0px 0px 2px 2px rgb(186 86 209 / 93%);
	cursor: default;
}

/* no zoom on dice because they get blury */
:not(#seasons_dices) > .stockitem:hover {
	transform: scale(1.05);
	z-index: 150 !important;
}

.all_die_faces {
}
.all_die_face {
	background-image: url("img/dices.png");
	width: 54px;
	height: 54px;
	margin: 5px;
	display: inline-block;
}

.tableau .cardactivation {
	position: absolute;
	left: 42px;
	bottom: 12px;
	background-image: url("img/icons.png");
	background-position: -150px 0px;
	width: 40px;
	height: 40px;
	box-shadow: 0px 0px 2px 2px rgb(186 86 209 / 93%);
}
.tableau .activated .cardactivation {
	display: block;
	box-shadow: none;
}

.cardenergies {
	position: absolute;
	left: 10px;
	top: 20px;
	width: 100px;
	height: 100px;
}
.cardartwrap {
}
.cardart {
	display: inline-block;
	background-image: url("img/bigcards.jpg");
	width: 248px;
	height: 346px;
	margin: 10px;
}

#player_hand {
	background-color: rgb(12 12 12 / 43%);
	text-align: center;
	border-radius: 10px;
	padding: 10px 5px 10px 5px;
	justify-content: space-between;
}
#player_hand,
#myhand h3 {
	box-shadow: inset 1px 1px 4px 2px #303838;
}
#myhand h3 {
	background-color: rgb(12 12 12 / 43%);
	border-radius: 8px 8px 0px 0px;
	padding: 4px 10px 0px 10px;
	margin: 0px;
	display: inline;
}
#myhand {
	text-align: center;
}

.ssn-loc-available:after {
	content: " ";
	position: absolute;
	z-index: 0;
	top: -1px;
	left: -1px;
	right: -1px;
	bottom: -1px;
	border: 2px solid white;
	margin: -5px;
	border-radius: 13px;
}

.empty-slot {
	box-shadow: inset 1px 1px 4px 2px #5c4223;
}

/* icons */

.sicon {
	display: inline-block;
	background-image: url("img/icons.png");
}

.icon_play {
	width: 12px;
	height: 12px;
	background-position: -130px 0px;
}
.icon_active {
	width: 12px;
	height: 12px;
	background-position: -130px -20px;
}
.icon_permanent {
	width: 12px;
	height: 12px;
	background-position: -100px -30px;
}
.icon_cristal {
	width: 30px;
	height: 30px;
	background-position: -119px -35px;
}
.icon_black_cube {
	width: 30px;
	height: 30px;
	background-position: -0px -25px;
}

.bonusUsedCube.bonusUsed0 {
	margin-left: -87px;
	margin-bottom: -7px;
}
.bonusUsedCube.bonusUsed1 {
	margin-left: -28px;
	margin-bottom: -4px;
}
.bonusUsedCube.bonusUsed2 {
	margin-left: 28px;
	margin-bottom: -4px;
}
.bonusUsedCube.bonusUsed3 {
	margin-left: 87px;
	margin-bottom: -7px;
}

.player_score .bonusused {
	vertical-align: text-bottom;
}

.left,
.firstPlayer,
.right {
	display: inline-block;
	overflow: hidden;
	background-repeat: no-repeat;
	background-image: url(img/icons2022.png);
}

.scrollable-stock button {
	width: 60px;
	height: 60px;
	background-color: transparent;
	align-self: center;
	background-position: center;
	display: inline-block;
	overflow: hidden;
	background-repeat: no-repeat;
	background-image: url(img/icons2022.png);
}

.scrollable-stock .right {
	background-position: 39.4068% -4%;
	background-size: 1280%;
}

.scrollable-stock .left {
	background-position: 30.5085% -4%;
	background-size: 1280%;
}
.firstPlayer {
	width: 70px;
	height: 71px;
	background-position: 0.537634% 0.540541%;
	background-size: 365.714%;
}

.playerOrderHelp {
	display: inline-block;
	padding-right: 3px;
	padding-left: 3px;
}

.player-board {
	border-radius: 8px 0 0 0px;
	overflow: hidden;
	background-color: #f3f1f1;
}

.player-board:not(#spectatorbox):before {
	content: "";
	position: absolute;
	left: 0;
	bottom: 0;
	height: 1px;
	width: 66%;
	border-bottom-style: solid;
	border-color: inherit;
	border-width: 6px;
}

.avatarBorder {
	border-width: 6px;
}

.player-board .ssn-avatar {
	display: inline-block;
	background-repeat: no-repeat;
	background-image: url(img/spritesresponsive.png);
	width: 100px;
	height: 100px;
	background-position: 62.799% 77.2519%;
	background-size: 544.681%;
	border-style: solid;
	border-radius: 50%;
	margin: -26px 0 -31px 62%;
}

#new-year {
	position: fixed;
	width: 100%;
	height: 100vh;
	background: black;
	color: white;
	top: 0;
	left: 0;
	display: flex;
	align-items: center;
	justify-content: center;
	font-size: 200%;
	opacity: 0;
	z-index: 100;
	pointer-events: none;
}
#new-year.new-year-animation {
	animation: new-year-animation 2.5s 1 forwards;
}

@keyframes new-year-animation {
	20% {
		opacity: 1;
	}
	80% {
		opacity: 1;
	}
	100% {
		opacity: 0;
	}
}

/*todo trouver l'icone*/
.icon_separator {
	width: 12px;
	height: 12px;
	background-position: -130px 0px;
}
.energy0,
.energy1,
.energy2,
.energy3,
.energy4 {
	width: 25px;
	height: 25px;
}
.energy0 {
	background-position: -120px -32px;
}
.energy1 {
	background-position: 0px 0px;
}
.energy2 {
	background-position: -25px 0px;
}
.energy3 {
	background-position: -50px 0px;
}
.energy4 {
	background-position: -75px 0px;
}

.invocation_level {
	background-position: -75px -25px;
	width: 25px;
	height: 25px;
}

.deadlock {
	position: absolute;
	background-image: url("img/icons.png");
	width: 100px;
	height: 37px;
	background-position: -0px -63px;
	top: 130px;
	left: 12px;
}

.trap {
	position: absolute;
	background-image: url("img/icons.png");
	width: 100px;
	height: 37px;
	background-position: -100px -63px;
	top: 10px;
	left: 12px;
}

/* player die */

.playerdie {
	width: 54px;
	height: 54px;
	background-image: url("img/dices.png");
	display: none;
	position: absolute;
	top: 0px;
	left: 0px;
}

.playerdie_wrap {
	width: 54px;
	height: 54px;
	float: left;
	position: relative;
}

.leftPlayerBoard .playerdie_wrap {
	border: 1px dashed darkgray;
	border-radius: 18px;
}
/* ... */

